--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -10,10 +10,8 @@
     convertWarningsToExceptions = "false"
     processIsolation            = "false"
     stopOnFailure               = "true"
-    syntaxCheck                 = "false"
     bootstrap                   = "splash/vendor/autoload.php" 
     verbose                     = "false"
-    debug                       = "false"    
     timeoutForLargeTests        = "120"  
 >
 
@@ -41,8 +39,9 @@
     </logging> 
         
     <php>
+        <ini    name="display_errors"   value="true"/>
         <const  name="SPLASH_DEBUG"     value="true" />
         <server name="SPLASH_TRAVIS"    value="false" />
-        <server name="SERVER_NAME"  value="http://localhost/Dolibarr/Dol-Multi/custom"/>
+        <server name="SERVER_NAME"      value="http://localhost/Dolibarr/Dol-7.0/custom"/>
     </php>
 </phpunit>
