--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
     },
     
     "require-dev": {
-        "phpunit/phpunit":                  ">5.4",
+        "phpunit/phpunit":                  "~5.0|~6.0|~7.0",
         "composer/composer":                "^1.5",
         "j13k/yaml-lint":                   "^1.1",
         "jakub-onderka/php-parallel-lint":  "^1.0",
@@ -35,7 +35,9 @@
         "sebastian/phpcpd":                 ">3.0",
         "seld/jsonlint":                    "^1.7",
         "sensiolabs/security-checker":      "^4.1",
-        "squizlabs/php_codesniffer":        "^3.2"
+        "squizlabs/php_codesniffer":        "^3.2",
+        "phpstan/phpstan":                  "~0.10",
+        "phpstan/phpstan-phpunit":          "~0.10"        
     },
     
     "autoload-dev": {
