--- a/.travis.yml
+++ b/.travis.yml
@@ -33,16 +33,16 @@ matrix:
 #          env: DOL=8.0 DATA=7.0.0 STAN=0    
 #        - php: 7.1
 #          env: DOL=8.0 DATA=7.0.0 STAN=1     
-#        - php: 7.2
-#          env: DOL=8.0 DATA=7.0.0 STAN=1     
+        - php: 7.2
+          env: DOL=8.0 DATA=7.0.0 STAN=1     
           
         # Dolibarr Develop Branch       
 #        - php: 5.6
 #          env: DOL=develop DATA=7.0.0 STAN=0        
 #        - php: 7.0
 #          env: DOL=develop DATA=7.0.0 STAN=1    
-        - php: 7.2
-          env: DOL=develop DATA=7.0.0 STAN=1    
+#        - php: 7.2
+#          env: DOL=develop DATA=7.0.0 STAN=1    
           
     allow_failures:
         - env: DOL=develop DATA=7.0.0 STAN=0 
