--- a/composer.json
+++ b/composer.json
@@ -36,6 +36,7 @@
         "seld/jsonlint":                    "^1.7",
         "sensiolabs/security-checker":      "^4.1",
         "squizlabs/php_codesniffer":        "^3.2",
+        "friendsofphp/php-cs-fixer":        ">2.10",         
         "phpstan/phpstan":                  "~0.10",
         "phpstan/phpstan-phpunit":          "~0.10"        
     },
