--- a/.travis.yml
+++ b/.travis.yml
@@ -17,16 +17,16 @@ matrix:
 #        # Dolibarr V6.0 Branch       
 #        - php: 5.6
 #          env: DOL=6.0 DATA=6.0.0 STAN=0    
-#        - php: 7.1
-#          env: DOL=6.0 DATA=6.0.0 STAN=1     
+        - php: 7.1
+          env: DOL=6.0 DATA=6.0.0 STAN=1     
 #
-#        # Dolibarr V7.0 Branch       
+        # Dolibarr V7.0 Branch       
 #        - php: 5.6
 #          env: DOL=7.0 DATA=7.0.0 STAN=0    
 #        - php: 7.0
 #          env: DOL=7.0 DATA=7.0.0 STAN=1       
-#        - php: 7.2
-#          env: DOL=7.0 DATA=7.0.0 STAN=1     
+        - php: 7.2
+          env: DOL=7.0 DATA=7.0.0 STAN=1     
 #          
 #        # Dolibarr V8.0 Branch       
 #        - php: 5.6
