--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ matrix:
 #          env: DOL=7.0 DATA=7.0.0 STAN=1       
         - php: 7.2
           env: DOL=7.0 DATA=7.0.0 STAN=1     
-#          
+          
 #        # Dolibarr V8.0 Branch       
 #        - php: 5.6
 #          env: DOL=8.0 DATA=7.0.0 STAN=0    
@@ -35,6 +35,14 @@ matrix:
 #          env: DOL=8.0 DATA=7.0.0 STAN=1     
         - php: 7.2
           env: DOL=8.0 DATA=7.0.0 STAN=1     
+
+        # Dolibarr V9.0 Branch       
+#        - php: 5.6
+#          env: DOL=8.0 DATA=7.0.0 STAN=0    
+#        - php: 7.1
+#          env: DOL=8.0 DATA=7.0.0 STAN=1     
+        - php: 7.2
+          env: DOL=9.0 DATA=9.0.0 STAN=1     
           
         # Dolibarr Develop Branch       
 #        - php: 5.6
@@ -89,9 +97,9 @@ before_script:
     # Run Composer
     - cd "$DOL_BUILD_DIR/htdocs/custom/"
     # With PHP 7 => Load Phpstan   
-    - if [[ ${TRAVIS_PHP_VERSION:0:3} < "7.1" ]]; then composer remove friendsofphp/php-cs-fixer --no-update --dev; fi
-    - if [[ ${TRAVIS_PHP_VERSION:0:3} < "7.1" ]]; then composer remove phpstan/phpstan-shim --no-update --dev; fi
-    - if [[ ${TRAVIS_PHP_VERSION:0:3} < "7.1" ]]; then composer remove phpstan/phpstan-phpunit --no-update --dev; fi    
+    - if [[ ${TRAVIS_PHP_VERSION:0:3} < "7.2" ]]; then composer remove friendsofphp/php-cs-fixer --no-update --dev; fi
+    - if [[ ${TRAVIS_PHP_VERSION:0:3} < "7.2" ]]; then composer remove phpstan/phpstan-shim --no-update --dev; fi
+    - if [[ ${TRAVIS_PHP_VERSION:0:3} < "7.2" ]]; then composer remove phpstan/phpstan-phpunit --no-update --dev; fi    
     - composer update 
     
 script: 
@@ -102,9 +110,9 @@ script:
     # Run Grump Main Test Sequence
     - php ./splash/vendor/bin/grumphp run --testsuite=travis
     # With PHP > 7.0 => Execute CsFixer
-    - if [[ ${TRAVIS_PHP_VERSION:0:3} > "7.0" ]]; then php ./splash/vendor/bin/grumphp run --testsuite=csfixer; fi    
+    - if [[ ${TRAVIS_PHP_VERSION:0:3} > "7.1" ]]; then php ./splash/vendor/bin/grumphp run --testsuite=csfixer; fi    
     # With PHP > 7.0 => Execute Phpstan 
-    - if [[ ${TRAVIS_PHP_VERSION:0:3} > "7.0" ]]; then php ./splash/vendor/bin/grumphp run --testsuite=phpstan; fi      
+    - if [[ ${TRAVIS_PHP_VERSION:0:3} > "7.1" ]]; then php ./splash/vendor/bin/grumphp run --testsuite=phpstan; fi      
     
     # Execute Bootstrap file    
     - php build/bootstrap.php
