WIP: Finalize Products Variants Feature & More

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,32 +25,32 @@ matrix:
         # Dolibarr V9.0 Branch       
         - php: 7.2
           env: DOL=9.0 DATA=9.0.0
+##        - php: 7.1
+##          env: DOL=9.0 DATA=9.0.0     
+##        - php: 5.6
+##          env: DOL=9.0 DATA=9.0.0    
+#
+##        # Dolibarr V8.0 Branch       
+##        - php: 7.2
+##          env: DOL=8.0 DATA=7.0.0     
 #        - php: 7.1
-#          env: DOL=9.0 DATA=9.0.0     
-#        - php: 5.6
-#          env: DOL=9.0 DATA=9.0.0    
-
-#        # Dolibarr V8.0 Branch       
-#        - php: 7.2
 #          env: DOL=8.0 DATA=7.0.0     
-        - php: 7.1
-          env: DOL=8.0 DATA=7.0.0     
+##        - php: 5.6
+##          env: DOL=8.0 DATA=7.0.0    
+#        
+#        # Dolibarr V7.0 Branch       
+##        - php: 7.1
+##          env: DOL=7.0 DATA=7.0.0
+#        - php: 7.0
+#          env: DOL=7.0 DATA=7.0.0      
+##        - php: 5.6
+##          env: DOL=7.0 DATA=7.0.0    
+#          
+##        # Dolibarr V6.0 Branch       
+##        - php: 7.1
+##          env: DOL=6.0 DATA=6.0.0     
 #        - php: 5.6
-#          env: DOL=8.0 DATA=7.0.0    
-        
-        # Dolibarr V7.0 Branch       
-#        - php: 7.1
-#          env: DOL=7.0 DATA=7.0.0
-        - php: 7.0
-          env: DOL=7.0 DATA=7.0.0      
-#        - php: 5.6
-#          env: DOL=7.0 DATA=7.0.0    
-          
-#        # Dolibarr V6.0 Branch       
-#        - php: 7.1
-#          env: DOL=6.0 DATA=6.0.0     
-        - php: 5.6
-          env: DOL=6.0 DATA=6.0.0
+#          env: DOL=6.0 DATA=6.0.0
           
     allow_failures:
         - env: DOL=develop DATA=9.0.0 
