--- a/.travis.yml
+++ b/.travis.yml
@@ -25,10 +25,10 @@ matrix:
         # Dolibarr V9.0 Branch       
         - php: 7.2
           env: DOL=9.0 DATA=9.0.0
-#        - php: 7.1
-#          env: DOL=9.0 DATA=9.0.0     
-#        - php: 5.6
-#          env: DOL=9.0 DATA=9.0.0    
+        - php: 7.1
+          env: DOL=9.0 DATA=9.0.0     
+        - php: 5.6
+          env: DOL=9.0 DATA=9.0.0    
 
 #        # Dolibarr V8.0 Branch       
 #        - php: 7.2
