--- a/composer.json
+++ b/composer.json
@@ -37,8 +37,8 @@
         "sensiolabs/security-checker":      "^4.1",
         "squizlabs/php_codesniffer":        "^3.2",
         "friendsofphp/php-cs-fixer":        ">2.10",         
-        "phpstan/phpstan":                  "~0.10",
-        "phpstan/phpstan-phpunit":          "~0.10"        
+        "phpstan/phpstan-shim":             "~0.11",
+        "phpstan/phpstan-phpunit":          "~0.11"        
     },
     
     "autoload-dev": {
