--- a/grumphp.yml
+++ b/grumphp.yml
@@ -102,6 +102,7 @@ parameters:
                 
         phpstan:
             level: "%level%"
+            autoload_file:  "splash/vendor/autoload.php"
             configuration:  "build/phpstan.neon"           
             ignore_patterns:
                 - LocalizationTrait.php
