--- a/.travis.yml
+++ b/.travis.yml
@@ -30,9 +30,9 @@ matrix:
         - php: 5.6
           env: DOL=9.0 DATA=9.0.0    
 
-#        # Dolibarr V8.0 Branch       
-#        - php: 7.2
-#          env: DOL=8.0 DATA=7.0.0     
+        # Dolibarr V8.0 Branch       
+        - php: 7.2
+          env: DOL=8.0 DATA=7.0.0     
         - php: 7.1
           env: DOL=8.0 DATA=7.0.0     
 #        - php: 5.6
@@ -45,12 +45,12 @@ matrix:
           env: DOL=7.0 DATA=7.0.0      
         - php: 5.6
           env: DOL=7.0 DATA=7.0.0    
-#          
-##        # Dolibarr V6.0 Branch       
-##        - php: 7.1
-##          env: DOL=6.0 DATA=6.0.0     
-#        - php: 5.6
-#          env: DOL=6.0 DATA=6.0.0
+          
+        # Dolibarr V6.0 Branch       
+        - php: 7.1
+          env: DOL=6.0 DATA=6.0.0     
+        - php: 5.6
+          env: DOL=6.0 DATA=6.0.0
           
     allow_failures:
         - env: DOL=develop DATA=9.0.0 
@@ -82,22 +82,23 @@ before_script:
     - git clone --depth=1 --branch="$DOL" https://github.com/Dolibarr/dolibarr.git $DOL_BUILD_DIR
 
     # Init Database
-    - bash $TRAVIS_BUILD_DIR/build/install_database.sh
+    - bash $TRAVIS_BUILD_DIR/.travis/install_database.sh
     
     # Setup Conf file
     - cd $DOL_BUILD_DIR
-    - bash $TRAVIS_BUILD_DIR/build/configure_dolibarr.sh  
-    - bash $TRAVIS_BUILD_DIR/build/upgrade_dolibarr.sh  
+    - bash $TRAVIS_BUILD_DIR/.travis/configure_dolibarr.sh  
+    - bash $TRAVIS_BUILD_DIR/.travis/upgrade_dolibarr.sh  
         
     # Copy Splash Module to Dolibarr folder
-    - cp -Rf $TRAVIS_BUILD_DIR/*                $DOL_BUILD_DIR/htdocs/custom/
-    - cp -Rf $TRAVIS_BUILD_DIR/.git/            $DOL_BUILD_DIR/htdocs/custom/.git/
-    - cp "$TRAVIS_BUILD_DIR/.travis.yml"        "$DOL_BUILD_DIR/htdocs/custom/.travis.yml"
-    - cp "$TRAVIS_BUILD_DIR/build/splash.json"  "$DOL_BUILD_DIR/htdocs/conf/splash.json"
+    - cp -Rf $TRAVIS_BUILD_DIR/*                    $DOL_BUILD_DIR/htdocs/custom/
+    - cp -Rf $TRAVIS_BUILD_DIR/.git/                $DOL_BUILD_DIR/htdocs/custom/.git/
+    - cp "$TRAVIS_BUILD_DIR/.travis.yml"            "$DOL_BUILD_DIR/htdocs/custom/.travis.yml"
+    - cp "$TRAVIS_BUILD_DIR/.travis/splash.json"    "$DOL_BUILD_DIR/htdocs/conf/splash.json"
 
     # Run Composer
     - cd "$DOL_BUILD_DIR/htdocs/custom/"
     # With PHP 7 => Load Phpstan   
+    - if [[ ${TRAVIS_PHP_VERSION:0:3} < "7.2" ]]; then composer remove splash/console --no-update --dev; fi
     - if [[ ${TRAVIS_PHP_VERSION:0:3} < "7.2" ]]; then composer remove friendsofphp/php-cs-fixer --no-update --dev; fi
     - if [[ ${TRAVIS_PHP_VERSION:0:3} < "7.2" ]]; then composer remove phpstan/phpstan-shim --no-update --dev; fi
     - if [[ ${TRAVIS_PHP_VERSION:0:3} < "7.2" ]]; then composer remove phpstan/phpstan-phpunit --no-update --dev; fi    
@@ -116,15 +117,15 @@ script:
     - if [[ ${TRAVIS_PHP_VERSION:0:3} > "7.1" ]]; then php ./splash/vendor/bin/grumphp run --testsuite=phpstan; fi      
     
     # Execute Bootstrap file    
-    - php build/bootstrap.php
+    - php .travis/bootstrap.php
     # Show PhpUnit Version
     - splash/vendor/phpunit/phpunit/phpunit --version
     # Run PhpUnit Main Local Testsuite
-    - splash/vendor/phpunit/phpunit/phpunit -c build/phpunit.xml.dist --testsuite=Local
+    - splash/vendor/phpunit/phpunit/phpunit -c .travis/phpunit.xml.dist --testsuite=Local
     # PHP7+     =>  Run PhpUnit Main Sequence
-    - if [[ ${TRAVIS_PHP_VERSION:0:1} > "5" ]]; then phpdbg -qrr -d memory_limit=-1 splash/vendor/phpunit/phpunit/phpunit -c build/phpunit.xml.dist; fi  
+    - if [[ ${TRAVIS_PHP_VERSION:0:1} > "5" ]]; then phpdbg -qrr -d memory_limit=-1 splash/vendor/phpunit/phpunit/phpunit -c .travis/phpunit.xml.dist; fi  
     # PHP5.6    =>  Without Php Debugger (Coverage x2 Faster)
-    - if [[ ${TRAVIS_PHP_VERSION:0:1} < "7" ]]; then splash/vendor/phpunit/phpunit/phpunit -c build/phpunit.xml.dist; fi  
+    - if [[ ${TRAVIS_PHP_VERSION:0:1} < "7" ]]; then splash/vendor/phpunit/phpunit/phpunit -c .travis/phpunit.xml.dist; fi  
         
 notifications:
   email:         
