--- a/.travis.yml
+++ b/.travis.yml
@@ -63,7 +63,7 @@ matrix:
 install:
     # Disable Xdebug ...
     - phpenv config-rm xdebug.ini
-    - phpenv config-add build/x_memory.ini
+    - phpenv config-add .travis/x_memory.ini
     
 before_script:
   
