--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,8 @@ matrix:
     include:
 
         # Dolibarr Develop Branch       
-#        - php: 7.2
-#          env: DOL=develop DATA=9.0.0    
+        - php: 7.2
+          env: DOL=develop DATA=9.0.0    
 #        - php: 7.0
 #          env: DOL=develop DATA=9.0.0    
 #        - php: 5.6
@@ -31,8 +31,8 @@ matrix:
           env: DOL=9.0 DATA=9.0.0    
 
         # Dolibarr V8.0 Branch       
-        - php: 7.2
-          env: DOL=8.0 DATA=7.0.0     
+#        - php: 7.2
+#          env: DOL=8.0 DATA=7.0.0     
         - php: 7.1
           env: DOL=8.0 DATA=7.0.0     
 #        - php: 5.6
