Move Travis Files to travis Dir

--- a/grumphp.yml
+++ b/grumphp.yml
@@ -109,14 +109,14 @@ parameters:
                 - splash/admin
                 - L03PaymentBanksTest.php
                 
-        build: 
-            source_folder:  "/splash"
-            target_folder:  "/dol_module"
-            build_folder:   "splash/"
-            build_file:     "module_splash-1.5.0"
-        
-    extensions:
-        - Splash\Console\Extension\Loader
+#        build: 
+#            source_folder:  "/splash"
+#            target_folder:  "/dol_module"
+#            build_folder:   "splash/"
+#            build_file:     "module_splash-1.5.0"
+#        
+#    extensions:
+#        - Splash\Console\Extension\Loader
         
     testsuites:
         travis:
