--- a/.travis.yml
+++ b/.travis.yml
@@ -109,10 +109,12 @@ script:
     - splash/vendor/phpunit/phpunit/phpunit --version
     # Run PhpUnit Main Local Testsuite
     - splash/vendor/phpunit/phpunit/phpunit -c travis/phpunit.xml.dist --testsuite=Local
+    - splash/vendor/phpunit/phpunit/phpunit -c travis/phpunit.xml.dist
+    
     # PHP7+     =>  Run PhpUnit Main Sequence
-    - if [[ ${TRAVIS_PHP_VERSION:0:1} > "5" ]]; then travis_wait 30 phpdbg -qrr -d memory_limit=-1 splash/vendor/phpunit/phpunit/phpunit -c travis/phpunit.xml.dist; fi  
+#    - if [[ ${TRAVIS_PHP_VERSION:0:1} > "5" ]]; then travis_wait 30 phpdbg -qrr -d memory_limit=-1 splash/vendor/phpunit/phpunit/phpunit -c travis/phpunit.xml.dist; fi  
     # PHP5.6    =>  Without Php Debugger (Coverage x2 Faster)
-    - if [[ ${TRAVIS_PHP_VERSION:0:1} < "7" ]]; then splash/vendor/phpunit/phpunit/phpunit -c travis/phpunit.xml.dist; fi  
+#    - if [[ ${TRAVIS_PHP_VERSION:0:1} < "7" ]]; then splash/vendor/phpunit/phpunit/phpunit -c travis/phpunit.xml.dist; fi  
         
 notifications:
   email:         
