FIX: VAriable Product Weight Writting

--- a/.travis.yml
+++ b/.travis.yml
@@ -35,6 +35,8 @@ matrix:
           env: DOL=9.0 DATA=9.0.0
         - php: 7.1
           env: DOL=9.0 DATA=9.0.0     
+        - php: 7.0
+          env: DOL=9.0 DATA=9.0.0     
 
         # Dolibarr V8.0 Branch       
         - php: 7.1
