--- a/.travis.yml
+++ b/.travis.yml
@@ -18,25 +18,23 @@ cache:
 matrix:
     include:
 
-#        # Dolibarr Develop Branch       
-#        - php: 7.3
-#          env: DOL=develop DATA=10.0.0    
-#        - php: 7.1
-#          env: DOL=develop DATA=10.0.0    
-#          
-#        # Dolibarr V10.0 Branch       
-#        - php: 7.3
-#          env: DOL=10.0 DATA=10.0.0    
-#        - php: 7.2
-#          env: DOL=10.0 DATA=10.0.0    
-#
-#        # Dolibarr V9.0 Branch       
-#        - php: 7.2
-#          env: DOL=9.0 DATA=9.0.0
-#        - php: 7.1
-#          env: DOL=9.0 DATA=9.0.0     
-#        - php: 7.0
-#          env: DOL=9.0 DATA=9.0.0     
+        # Dolibarr Develop Branch       
+        - php: 7.3
+          env: DOL=develop DATA=10.0.0    
+        - php: 7.1
+          env: DOL=develop DATA=10.0.0    
+          
+        # Dolibarr V10.0 Branch       
+        - php: 7.3
+          env: DOL=10.0 DATA=10.0.0    
+        - php: 7.2
+          env: DOL=10.0 DATA=10.0.0    
+
+        # Dolibarr V9.0 Branch       
+        - php: 7.2
+          env: DOL=9.0 DATA=9.0.0
+        - php: 7.1
+          env: DOL=9.0 DATA=9.0.0     
 
         # Dolibarr V8.0 Branch       
         - php: 7.1
