WIP: Tests on Dolibarr V11

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,24 +21,24 @@ matrix:
         # Dolibarr Develop Branch       
 #        - php: 7.3
 #          env: DOL=develop DATA=11.0.0    
-#        - php: 7.1
-#          env: DOL=develop DATA=11.0.0    
+        - php: 7.1
+          env: DOL=develop DATA=11.0.0    
 
         # Dolibarr V11.0 Branch       
-#        - php: 7.3
-#          env: DOL=11.0 DATA=11.0.0    
+        - php: 7.3
+          env: DOL=11.0 DATA=11.0.0    
         - php: 7.1
           env: DOL=11.0 DATA=11.0.0  
           
         # Dolibarr V10.0 Branch       
-##        - php: 7.3
-##          env: DOL=10.0 DATA=10.0.0    
+        - php: 7.3
+          env: DOL=10.0 DATA=10.0.0    
         - php: 7.1
           env: DOL=10.0 DATA=10.0.0    
 
         # Dolibarr V9.0 Branch       
-##        - php: 7.2
-##          env: DOL=9.0 DATA=9.0.0
+        - php: 7.2
+          env: DOL=9.0 DATA=9.0.0
         - php: 7.1
           env: DOL=9.0 DATA=9.0.0     
 
@@ -51,7 +51,7 @@ matrix:
           env: DOL=7.0 DATA=7.0.0      
           
     allow_failures:
-        - env: DOL=develop DATA=10.0.0 
+        - env: DOL=develop DATA=11.0.0 
           
         
     # Fast finish allows to set the build as "finished" even if the "allow_failures" matrix elements are not finished yet.
